# Meno

./: CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/resources/workers/: interactive_worker.py
src-tauri/src/: lib.rs  main.rs
src/assets/: KEF20633.rxn  KEF20633.sdf  KEF20633_b_296.xyz  KEF96002.rxn
src/lib/: pyEnv.ts
src/lib/chem/: acs.ts  layout2d.ts
src/lib/core/: index.ts  state.ts  types.ts
src/ui/features/MoleculeViewer/: MoleculeViewer.tsx  index.ts
src/ui/features/MoleculeViewer/components/: FacingText.tsx  ModeTabs.tsx  MotionAtom.tsx  MotionBond.tsx  MotionMeasure.tsx  index.ts
src/ui/features/OmniHub/: OmniLoader.tsx  index.ts
src/ui/features/PythonConsole/: PyConsole.tsx  index.ts
src/ui/features/SettingsPanel/: SettingsPanel.tsx  index.ts
src/ui/features/StructureEditor/: StructureCanvas.tsx  constants.ts  index.ts  store.tsx
src/ui/features/StructureEditor/components/: AromaticCircles2D.tsx  Arrows2D.tsx  Atoms2D.tsx  AtomsHoverRings2D.tsx  Bonds2D.tsx  BondsPick2D.tsx  CapJoinLine.tsx  ExportSvg2D.tsx  ExtendPreview2D.tsx  FitToContent2D.tsx  HoverOverlay2D.tsx  (+8 more)
src/ui/features/TextEditor/: TextEditor.tsx  index.ts
src/ui/features/WorkflowEditor/: GraphEditor.tsx  index.ts
src/ui/layouts/: TopBar.tsx
src/ui/theme/: colors.ts
src/ui/views/: Deck.tsx  index.ts  registry.tsx
src/utils/: atomUtils.ts  importers.ts  structureParsers.ts
(+13 files in other folders)
